Successfully updated the UI and linked with backend project

--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -14,7 +14,16 @@
 	</properties>
 
 	<dependencies>
-
+	
+	
+		<!-- Link backend project -->
+		<dependency>
+			<groupId>web.josim</groupId>
+			<artifactId>backend</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
+		
 		<!-- JAVA EE API -->
 		<!-- https://mvnrepository.com/artifact/javax/javaee-api -->
 		<dependency>
